<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <TextView android:id="@+id/clientProfileSecondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:text="@string/profile_second_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileSecondName"
        android:text="@string/profile_first_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfilePatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileFirstName"
        android:text="@string/profile_patronymic"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfilePatronymic"
        android:text="@string/profile_address"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileAddress"
        android:text="@string/profile_category"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileCategory"
        android:text="@string/profile_problem"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileAdultsAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileProblem"
        android:text="@string/profile_adults_amount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileKidsAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileAdultsAmount"
        android:text="@string/profile_kids_amount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileServicesAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileKidsAmount"
        android:text="@string/profile_services_amount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
        <TextView android:id="@+id/clientInfoServicesAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_below="@+id/clientProfileServicesAmount"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView android:id="@+id/clientSocPedServicesAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_below="@+id/clientInfoServicesAmount"
            android:text="@string/soc_ped"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView android:id="@+id/clientSocPsychoServicesAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_below="@+id/clientSocPedServicesAmount"
            android:text="@string/soc_psycho"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView android:id="@+id/clientJuristPsychoServicesAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_below="@+id/clientSocPsychoServicesAmount"
            android:text="@string/jurist"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:textStyle="bold"
            android:visibility="gone"/>
    <TextView android:id="@+id/clientProfileVisitsAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientJuristPsychoServicesAmount"
        android:text="@string/profile_visits_amount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileIsDLC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileVisitsAmount"
        android:text="@string/profile_is_dlc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileIsUnderSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileIsDLC"
        android:text="@string/profile_is_under_support"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileDateSupportStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileIsUnderSupport"
        android:text="@string/date_support_starts"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:visibility="gone"/>
    <TextView android:id="@+id/clientProfileIsSupportFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileDateSupportStarted"
        android:text="@string/profile_is_support_finished"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"/>
    <TextView android:id="@+id/clientProfileDateSupportFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileIsSupportFinished"
        android:text="@string/profile_support_finished_on_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:visibility="gone"/>
    <TextView android:id="@+id/clientProfileSupportResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="2dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/clientProfileDateSupportFinished"
        android:text="@string/profile_support_result"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:visibility="gone"/>
</RelativeLayout>
