<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lt_gray">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:id="@+id/clientPhoto"
            android:layout_margin="4dp"
            app:civ_border_width="1dp"
            app:civ_border_color="#FFFFFF"
            android:src="@drawable/default_client_avatar"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_first_name"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_first_name"
            android:hint="@string/first_name_hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_patronymic"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_patronymic"
            android:hint="@string/patronymic_hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_second_name"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_second_name"
            android:hint="@string/second_name_hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_address"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_address"
            android:hint="@string/address_hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_adults_amount"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_adults_amount"
            android:hint="@string/adults_amount_hint"
            android:inputType="number"
            android:lines="6"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_kids_amount"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_kids_amount"
            android:hint="@string/kids_amount_hint"
            android:inputType="number"
            android:lines="6"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_problem"
        android:layout_marginBottom="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_problem"
            android:hint="@string/problem_hint"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_dlc"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:id="@+id/chbIsDLC"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/is_under_support"
            android:layout_marginBottom="10dp"
            android:checked="true"
            android:id="@+id/chbIsUnderSupport"
            android:layout_weight="2"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDateSupportStarts"
            android:text="@string/date_support_starts"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/SpecialButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/supportFinishedLayout"
        android:visibility="gone">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/is_support_finished"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:id="@+id/chbIsFinishedSupport"
            android:layout_weight="2"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDateSupportFinished"
            android:enabled="false"
            android:text="@string/date_support_starts"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/SpecialButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/supportResultLayout"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/with_result"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgSupportResult">
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result_positive"
                android:id="@+id/rbResultPositive"
                android:elevation="6dp"
                android:checked="true"/>
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/result_negative"
                android:id="@+id/rbResultNegative"
                android:elevation="6dp"/>
        </RadioGroup>
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:text="@string/button_add"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/SpecialButton"
            android:layout_weight="2"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="@string/button_cancel"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:theme="@style/SpecialButton"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>